[gd_scene load_steps=4 format=3 uid="uid://r147iukh4x4i"]

[ext_resource type="Script" uid="uid://c381llw6pvlw" path="res://scripts/ui/settings.gd" id="1_x3vyp"]
[ext_resource type="FontFile" uid="uid://c62pkskh2kaeb" path="res://assets/fonts/ITC SerifGothic.ttf" id="2_0b1cv"]
[ext_resource type="Theme" uid="uid://b850r5w08k6r5" path="res://resources/VaporwaveTheme.tres" id="3_yu862"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x3vyp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.717647)

[node name="SettingsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 237.0
offset_top = 135.0
offset_right = -253.0
offset_bottom = 238.0
grow_horizontal = 2
theme = ExtResource("3_yu862")
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanel"]
custom_minimum_size = Vector2(850, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -58.0
offset_right = 101.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VboxLabels" type="VBoxContainer" parent="SettingsPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="SettingsPanel/HBoxContainer/VboxLabels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0b1cv")
theme_override_font_sizes/font_size = 32
text = "Music Volume"
vertical_alignment = 1

[node name="SFXLabel" type="Label" parent="SettingsPanel/HBoxContainer/VboxLabels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0b1cv")
theme_override_font_sizes/font_size = 32
text = "SFX Volume"
vertical_alignment = 1

[node name="SensitivityLabel" type="Label" parent="SettingsPanel/HBoxContainer/VboxLabels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0b1cv")
theme_override_font_sizes/font_size = 32
text = "Aim Sensitivity"
vertical_alignment = 1

[node name="VboxValues" type="VBoxContainer" parent="SettingsPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1

[node name="MusicVolumeLabel" type="LineEdit" parent="SettingsPanel/HBoxContainer/VboxValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0b1cv")
theme_override_font_sizes/font_size = 32
text = "0.2"
alignment = 2

[node name="SFXVolumeLabel" type="LineEdit" parent="SettingsPanel/HBoxContainer/VboxValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0b1cv")
theme_override_font_sizes/font_size = 32
text = "0.2"
alignment = 2

[node name="SensitivityValueLabel" type="LineEdit" parent="SettingsPanel/HBoxContainer/VboxValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0b1cv")
theme_override_font_sizes/font_size = 32
text = "7.0"
alignment = 2

[node name="VBoxSliders" type="VBoxContainer" parent="SettingsPanel/HBoxContainer"]
custom_minimum_size = Vector2(550, 450)
layout_mode = 2
alignment = 1

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/HBoxContainer/VBoxSliders"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("3_yu862")
max_value = 1.0
step = 0.05
value = 0.2

[node name="SFXSlider" type="HSlider" parent="SettingsPanel/HBoxContainer/VBoxSliders"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("3_yu862")
max_value = 1.0
step = 0.05
value = 0.2

[node name="SensitivitySlider" type="HSlider" parent="SettingsPanel/HBoxContainer/VBoxSliders"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("3_yu862")
min_value = 100.0
max_value = 1000.0
value = 700.0

[node name="FullscreenCheckButton" type="CheckButton" parent="SettingsPanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -265.0
offset_right = 150.0
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_yu862")
text = "Fullscreen"

[node name="BackButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -135.0
offset_right = 58.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_yu862")
text = "Back"

[connection signal="value_changed" from="SettingsPanel/HBoxContainer/VBoxSliders/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsPanel/HBoxContainer/VBoxSliders/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="SettingsPanel/HBoxContainer/VBoxSliders/SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
[connection signal="toggled" from="SettingsPanel/FullscreenCheckButton" to="." method="_on_fullscreen_check_button_toggled"]
[connection signal="pressed" from="SettingsPanel/BackButton" to="." method="_on_back_button_pressed"]
